--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Americans Against Road Bikers of America (AARBAA) raises awareness about the dangers road bikers face while sharing roads with motor vehicles.">
+    <meta name="description" content="Americans Against Road Bikers Association of America (AARBAA) raises awareness about the dangers road bikers face while sharing roads with motor vehicles.">
     <meta name="keywords" content="road biker safety, road cycling danger, bike accidents, road safety awareness">
     <meta name="author" content="AARBAA">
-    <title>Americans Against Road Bikers of America | AARBAA</title>
+    <title>Americans Against Road Bikers Association of America | AARBAA</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,20 +16,21 @@
             color: #333;
         }
         header {
-            background: #d9534f;
+            background: #010104;
             color: white;
             text-align: center;
             padding: 20px;
         }
         nav {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             background: #333;
             padding: 10px;
         }
         nav a {
             color: white;
-            margin: 0 15px;
+            margin: 10px;
             text-decoration: none;
             font-size: 18px;
         }
@@ -55,7 +56,7 @@
             text-align: center;
             margin: 30px 0;
             padding: 20px;
-            background: #d9534f;
+            background: #df1b15;
             color: white;
             font-size: 20px;
         }
@@ -69,12 +70,37 @@
             margin-top: 20px;
         }
         button {
-            background: #d9534f;
+            background: #df1b15;
             color: white;
             border: none;
             padding: 10px 20px;
             font-size: 18px;
             cursor: pointer;
+        }
+        @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+                align-items: center;
+            }
+            nav a {
+                display: block;
+                margin: 5px 0;
+            }
+            .container {
+                width: 90%;
+                padding: 10px;
+            }
+            header {
+                padding: 15px;
+            }
+            .cta {
+                font-size: 16px;
+                padding: 15px;
+            }
+            button {
+                font-size: 16px;
+                padding: 8px 15px;
+            }
         }
     </style>
 </head>
@@ -130,7 +156,8 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 Americans Against Road Bikers of America | All Rights Reserved.</p>
+        <p>&copy; 2025 Americans Against Road Bikers of Association America | All Rights Reserved.</p>
     </footer>
 </body>
 </html>
+
