--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body>
     <header>
-        <h1>Americans Against Road Bikers of America</h1>
+        <h1>Americans Against Road Bikers Association of America</h1>
         <p>Raising awareness about the dangers road bikers face on shared roads.</p>
     </header>
     
